--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -1,4 +1,7 @@
 <h1>Title: <%= @listing.title %></h1>
+<div>
+  Posted By: <%= @listing.user.email %>
+</div>
 <p>Description: <%= @listing.description %></p>
 <p>Max Guests: <%= @listing.max_guests %></p>
 <p>Price: <%= @listing.price %></p>
