able to create bookings

--- a/app/views/listings/show.html.erb
+++ b/app/views/listings/show.html.erb
@@ -6,3 +6,4 @@
 <p>Max Guests: <%= @listing.max_guests %></p>
 <p>Price: <%= @listing.price %></p>
 <%= link_to "Edit", edit_listing_path(@listing) %>
+<%= render "bookings/form" %>
