--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -10,6 +10,9 @@
  * defined in the other CSS/SCSS files in this directory. It is generally better to create a new
  * file per style scope.
  *
+ *= require importing_bootstrap
+ *= require font-awesome
+ *= require css/modern-business.css
  *= require_tree .
  *= require_self
  */
