--- a/app/views/listings/new.html.erb
+++ b/app/views/listings/new.html.erb
@@ -1,2 +1,8 @@
-<h1>New Listing</h1>
-<%= render "listings/form" %>
+<div class="container">
+  <div class="row">
+    <div class="col-sm-10 col-offset-sm-2">
+      <h1>New Listing</h1>
+      <%= render "listings/form" %>
+    </div>
+  </div>
+</div>
