--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -4,17 +4,18 @@
       <%= @errors %>
     </div>
   <% end %>
-  <div>
+  <div class="col-sm-12">
     <%= f.label :num_guests %>
-    <%= f.number_field :num_guests %>
+    <%= f.number_field :num_guests, class: "form-control" %>
   </div>
-  <div>
+  <br>
+  <div class="col-sm-6">
     <%= f.label :start_date %>
-    <%= f.date_field :start_date %>
+    <%= f.date_field :start_date, class: "form-control" %>
   </div>
-  <div>
+  <div class="col-sm-6">
     <%= f.label :end_date %>
-    <%= f.date_field :end_date %>
+    <%= f.date_field :end_date, class: "form-control" %>
   </div>
-  <%= f.submit "Submit Booking" %>
+  <%= f.submit "Submit Booking", class: 'col-sm-12 btn btn-primary' %>
 <% end %>
