added country code and tag selection

--- a/app/views/listings/_form.html.erb
+++ b/app/views/listings/_form.html.erb
@@ -10,6 +10,11 @@
   </div>
   <br>
   <div>
+    <%= f.label :country_code %>
+    <%= f.country_select :country_code, {selected: "SG"}, class: "form-control"  %>
+  </div>
+  <br>
+  <div>
     <%= f.label :max_guests %>
     <%= f.number_field :max_guests, class: "form-control"  %>
   </div>
@@ -17,6 +22,10 @@
   <div>
     <%= f.label :price %>
     <%= f.number_field :price, class: "form-control"  %>
+  </div>
+  <div>
+    <%= f.label :tag_ids %>
+    <%= f.collection_check_boxes :tag_ids, Tag.all, :id, :name %>
   </div>
   <hr>
   <br>
