--- a/app/views/listings/_list.html.erb
+++ b/app/views/listings/_list.html.erb
@@ -1,4 +1,4 @@
-<!-- /.row -->
+<div id="filterrific_results">
 <% @listings.each do |listing| %>
 <!-- Project One -->
   <div class="row">
@@ -17,3 +17,4 @@
   <!-- /.row -->
   <hr>
 <% end %>
+</div>
