--- a/app/views/listings/index.html.erb
+++ b/app/views/listings/index.html.erb
@@ -13,7 +13,8 @@
                 </ol>
             </div>
         </div>
-        <%= render "listings/list" %>
+        <%= render "listings/filterrific_form" %>
+        <%= render partial: "listings/list", locals: { listings: @listings } %>
         <!-- Pagination -->
         <div class="row text-center">
             <div class="col-lg-12">
