--- a/app/views/users/_form.html.erb
+++ b/app/views/users/_form.html.erb
@@ -1,11 +1,11 @@
 <%= form_for @user do |f| %>
   <div>
-    <%= f.label :username %>
-    <%= f.text_field :username %>
+    <%= f.label :email %>
+    <%= f.text_field :email %>
   </div>
   <div>
-    <%= f.label :name %>
-    <%= f.text_field :name %>
+    <%= f.label :password %>
+    <%= f.password_field :password %>
   </div>
   <%= f.submit "Submit" %>
 <% end %>
