--- a/app/views/bookings/_form.html.erb
+++ b/app/views/bookings/_form.html.erb
@@ -17,6 +17,14 @@
     <%= f.label :end_date %>
     <%= f.date_field :end_date, class: "form-control" %>
   </div>
+<!--   <script type="text/javascript">
+    $(document).ready(function(){
+      $('#booking_num_guests').change(function(){
+        $('.totalprice').html('<div><%=  @listing.price %> * $(#booking_num_guests).val()</div>');
+        });
+      });
+  </script> -->
+  <div>Total:</div><div class="totalprice"></div>
 
   <div id="payment-form"></div>
 
