--- a/app/views/layouts/_navbar.html.erb
+++ b/app/views/layouts/_navbar.html.erb
@@ -32,7 +32,9 @@
                                     <%= link_to "Sign In", sign_in_path %>
                                 </li>
                             <% end %>
-                        </ul>
+                    </li>
+                    <li>
+                        <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#searchModal">Search Listings</button>
                     </li>
                 </ul>
             </div>
@@ -40,3 +42,32 @@
         </div>
         <!-- /.container -->
     </nav>
+
+<div id="searchModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Search Lstings</h4>
+      </div>
+      <div class="modal-body">
+        
+        <%= form_tag @listings, method: :get do %>
+          <div class="form-group">
+            Search
+            <%= text_field_tag :query, params[:query], class: 'form-control typeahead', autocomplete: "off" %>
+            <%= submit_tag 'Search', class: 'btn btn-primary' %>
+          </div>
+        <% end %>
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+
+  </div>
+</div>
+
